@@ -999,3 +999,5 @@ unreleased Version 0.48.0
   * fix installation of the D icon for the solution explorer
   * when pasting code to D source file newlines are adapted to surrounding code
   * dparser: no semantic info for a package if any file in the package has fatal parser error
+  * VS2017: D compiler installation paths are now saved to "HKCR\Softwre\Visual D" to be picked up by msbuild
+  * msbuild with LDC: runtime library selection now also available
